# wie

./: Cargo.toml  Cross.toml
.github/workflows/: release.yml
scripts/: build-android.sh
wie_backend/src/: lib.rs  net.rs  system.rs
wie_cli/: build.rs
wie_core_arm/: Cargo.toml
wie_core_arm/src/: core.rs  engine.rs
wie_core_arm/src/engine/: unicorn.rs
wie_j2me/src/: emulator.rs
wie_ktf/src/: emulator.rs
wie_ktf/src/runtime/wipi_c/: method_table.rs
wie_lgt/src/: emulator.rs
wie_libretro/: Cargo.toml  README.md
wie_libretro/overlays/: generate_overlay.py  wie_feature_phone.cfg
wie_libretro/src/: audio.rs  database.rs  filesystem.rs  input.rs  lib.rs  options.rs  options_gen.py  system.rs  worker.rs
wie_skt/src/: emulator.rs
wie_wipi_c/src/api/: net.rs  util.rs
