[package]
name = "wie_core_arm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
bytemuck = { workspace = true }
md5 = { workspace = true }
serde = { version = "^1", default-features = false, features = ["derive", "alloc"] }
spin = { workspace = true }
toml = { version = "^0.8", default-features = false, features = ["parse"] }
tracing = { workspace = true }

arm32_cpu = { git = "https://github.com/dlunch/arm32_cpu.git" }

wie_backend = { workspace = true }
wie_util = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gdbstub = { version = "^0.7" }
gdbstub_arch = { version = "^0.3" }
crossbeam = { version = "^0.8" }

# Unicorn (QEMU TCG) JIT backend. Pulled on every host that allows RWX
# pages — i.e. everywhere except iOS/tvOS, where Apple blocks JIT for
# unsigned apps. wasm32 also can't run native code.
[target.'cfg(not(any(target_arch = "wasm32", target_os = "ios", target_os = "tvos")))'.dependencies]
unicorn-engine = { version = "^2.1", default-features = false, features = ["arch_arm"] }

[dev-dependencies]
futures = { workspace = true, features = ["executor"] }
futures-test = { workspace = true }
test_utils = { workspace = true }
