[package]
name = "wie_libretro"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = { workspace = true }
directories = "^6.0"
log = "0.4"
rust-libretro = { version = "0.3", features = ["log", "unstable-env-commands"] }
tracing = { workspace = true }

wie_backend = { workspace = true }
wie_util = { workspace = true }
wie_j2me = { path = "../wie_j2me" }
wie_ktf = { path = "../wie_ktf" }
wie_lgt = { path = "../wie_lgt" }
wie_skt = { path = "../wie_skt" }
